feat: removendo os comentarios e adicioando novas cores

--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,6 @@
 }
 
 :root {
-    --corPrincipal: #20C088;
-    --corSecundaria: #111;
+    --corPrincipal: #2331CD;
+    --corSecundaria: #fff;
 }
